NOCC 1.7  ?? ??, ??

  Bugs
    * Bug #2013844 : Javascript warning validate(f) send.php (Arnaud Boudou).
    * Bug #2009567 : Cannot delete one mail (Arnaud Boudou).

  Patches
    * Patch #2019643 : Spanish translation (Juan).
    * Patch #2019010 : Change "receipt" checkbox in send form (Tim Gerundt).
    * Patch #2011244 : Updated Czech translation (Ragimiri).
    * Patch #2010065 : Optimize regexs for remote image security (Tim Gerundt).

  RFE
    * RFE #2025620 : send_delay (Arnaud Boudou).
    * RFE #2025591 : login_prefix (Arnaud Boudou).

  Misc
    * Fix some bugs on multiple mails actions (Arnaud Boudou).

NOCC 1.6  July 01, 2008

  Bugs
    * Bug #2000880 : No evaluation of themes saved in user preferences (Tobias
      Mathes).
    * Bug #1994489 : "move deleted mails" doesn't work (Tobias Gesellchen).
    * Bug #1920092 : Reduce PHP Notices when debug set to E_ALL (Arnaud Boudou).
    * Bug #1915569 : Small bug: prefs.php serves invalid XHTML1.1 (openfan).
    * Bug #1915542 : Directory traversal: ../utils/crypt.php not found?
      (openfan).

  Patches
    * Patch #2000920 : No evaluation of themes saved in user preferences (Tobias
      Mathes).
    * Patch #1999529 : NOCC breaks message threads on Reply All (Tobias Mathes).
    * Patch #1999513 : Quota limits format (Tobias Mathes).
    * Patch #1955700 : Updated Czech translation (Ragimiri).
    * Patch #1955195 : Turkish Translation complete (Ismail Özer).
    * Patch #1921698 : Eliminate deprecated center tag (Tobias Mathes).
    * Patch #1916104 : Patch to updated pt-br translation (Renato Frederick).
    * Patch #1915516 : The 2 missing Dutch translations (openfan).
    * Patch #1915151 : NOCC breaks message threads on reply (Tobias Mathes).
    * Patch #1911516 : Add submenu to mail view (Tim Gerundt).
    * Patch #1909759 : Message body word wrap (Tobias Mathes).
    * Patch #1908364 : Move "Manage IMAP Folders" to main menu (Tim Gerundt).
    * Patch #1897338 : Add favicon (Tim Gerundt).