@@ -473,6 +473,24 @@ img.sort {
   text-align: left;
 }
 
+#attachTable {
+  width: auto;
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+
+#attachTable th {
+  text-align: left;
+  background-color: #99cc99;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+}
+
+#attachTable td {
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+}
+
 #receipt {
   margin-left: 2em;
 }
